# gum

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/main/: main.cpp
include/gum/: gum.hpp  mat.hpp  quat.hpp  vec.hpp
include/gum/mat/: mat_apply.inl  mat_cond.inl  mat_det.inl  mat_get.inl  mat_make.inl  mat_modify.inl  mat_mul.inl  mat_ops.inl
include/gum/vec/: vec.inl  vec_apply.inl  vec_get.inl  vec_ops.inl  vec_std.inl
tests/: CMakeLists.txt  simple.cpp
